Changed deprecated Integer boxing approach.